--- a/html/index.html
+++ b/html/index.html
@@ -4,3 +4,5 @@
 <body>
   <p id="yo"> yo yo yo yo yo yo yo </p>
 </body>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script>$("#yo").append("hey hey hey hey!!!!!");</script>
